# remotePCController

build-pcControllerServer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-pcControllerServer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-0f218d3f6a338cad2187.json  codemodel-v2-2782a2a45155b3af99b4.json  codemodel-v2-5f628acc240b5f9da25a.json  directory-.-Debug-0fdd302afa6527f7f948.json  directory-.-Debug-eaff4e1f4646919b3f89.json  index-2022-11-20T15-31-15-0020.json  index-2023-03-25T16-16-58-0861.json  index-2023-04-23T12-29-52-0771.json  target-pcControllerServer-Debug-026a229c35e0ad0283b3.json  target-pcControllerServer-Debug-d450db0c60bae5065ac2.json  (+1 more)
build-pcControllerServer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
frontend/: index.html
frontend/assets/css/: style.css
frontend/js/: init.js
pcControllerServer/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  defines.h  main.c
pcControllerServer/build-pcControllerServer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
pcControllerServer/build-pcControllerServer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-05047983aa4fc7719383.json  cmakeFiles-v1-769c16fe129440ebd2c6.json  codemodel-v2-079e428e06cc71390052.json  index-2022-11-20T15-28-29-0131.json
pcControllerServer/build-pcControllerServer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
pcControllerServer/build-pcControllerServer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: main.c.2C24F798AFEA10EA.idx
pcControllerServer/misc/SHA1/: sha1.c  sha1.h
pcControllerServer/misc/datastructures/: conqueue.c  conqueue.h  node.h  queue.c  queue.h  stack.c  stack.h
pcControllerServer/misc/logger/: logger.c  logger.h
pcControllerServer/parsers/: rawdataparser.h
pcControllerServer/service/: pcController.h
pcControllerServer/service/codogram/: MouseMoveCodogram.h  codogrambase.c  codogrambase.h  codogramids.h
pcControllerServer/service/commands/: commands.h
pcControllerServer/socket/: socket.c  socket.h
pcControllerServer/websocket/: websocket.c  websocket.h
webClient/: debug.html  index.html  init.js  style.css
webClient/assets/css/: style.css
(+183 files in other folders)
